<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2) Hello Android Example</string>
    <string name="hello_world">Hello Android!</string>
    <string name="action_settings">Settings</string>
    <string name="type_something">Type Something Here!</string>
    <string name="see_what_happens">See What Happens</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="enable_intents">Enable Intent Buttons</string>

</resources>
