<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFD0DFEF"
    tools:context="example.hello_android.MainActivity">

    <TextView
        android:id="@+id/hello_world_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="20sp"
        android:textColor="#FF000000"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/input_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_world_label"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#FF000000"
        android:inputType="textCapWords"
        android:hint="@string/type_something"
        android:padding="7dp" />

    <Button
        android:id="@+id/what_happens_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/see_what_happens"
        android:textColor="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/explicit_intent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_back"
            android:text="@string/explicit_intent"
            android:enabled="false"/>

        <Button
            android:id="@+id/implicit_intent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_back"
            android:text="@string/implicit_intent"
            android:enabled="false" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_layout"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_back"
        android:text="@string/enable_intents"
        android:onClick="enableIntents"/>

</RelativeLayout>
